# llama-index-test-project

./: .gitignore  README.md  ingest_chroma.py  main.py  main_react.py  pyproject.toml  run.sh  run_react_agent.sh
src/: chroma_retriever.py
src/tools/: chroma_tools.py
