[project]
version = "0.0.1"
name = "llamaIndex-chat"
dependencies = [
    "pinecone==7.3.0",
    "loguru==0.7.3",
    "llama-index==0.14.2",
    "llama-index-llms-azure-openai==0.4.1",
    "llama-index-vector-stores-pinecone==0.7.1",
    "llama-index-vector-stores-chroma==0.5.3",
    "llama-index-embeddings-azure-openai==0.4.1",
    "streamlit==1.50.0",
    "faker==37.11.0"
]

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "isort==6.0.1"
]

[tool.setuptools]
py-modules = []
